#====================#
#=== PACKAGE INFO ===#

[package]
  name = "mathio"
  version = "0.2.5"
  edition = "2021"
  readme  = "README.md"
  license = "MIT OR Apache-2.0"
  authors = ["IDEDARY"]

  repository  = "https://github.com/bytestring-net/mathio"
  keywords    = ["mathio", "math", "tweening", "periodic", "fractions"]
  categories  = ["data-structures", "mathematics"]
  description = "A lightweight, simple and straight-forward opinionated library for math used in other projects"

#===============================#
#=== DEPENDENCIES & FEATURES ===#

[dependencies]
  serde = { version = "*", default_features = false, features = ["derive"], optional = true }

[features]
  serde = ["dep:serde"]
